--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Ethan <liu.zy.ethan@gmail.com>"]
 edition = "2021"
 license = "MIT or Apache-2.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+proc-macro = true
 
 [dependencies]
 anyhow = "1.0.95"
