--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,12 @@ license = "MIT or Apache-2.0"
 proc-macro = true
 
 [dependencies]
+proc-macro2 = "1.0.92"
+quote = "1.0.37"
+syn = { version = "2.0.91", features = ["extra-traits"] }
+
+
+[dev-dependencies]
 anyhow = "1.0.95"
-futures = "0.3.28"
 tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
+futures = "0.3.30"
