--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT or Apache-2.0"
 proc-macro = true
 
 [dependencies]
+darling = "0.20.10"
 proc-macro2 = "1.0.92"
 quote = "1.0.37"
 syn = { version = "2.0.91", features = ["extra-traits"] }
